payment operation changed

--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <o-app-layout show-language-selector="yes">
   <o-user-info-configuration show-profile="yes" show-settings="no" [routerLink] ="['./main/profile']">
-  <o-user-info-configuration-item name="payment" icon="💳" [action]="myAction" ></o-user-info-configuration-item> 
+  <o-user-info-configuration-item name="payment" icon="credit_card" [action]="myAction" ></o-user-info-configuration-item> 
 </o-user-info-configuration>
   <router-outlet>
   </router-outlet>
