--- a/frontend/src/app/main/payment/payment-home/payment-home.component.css
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.css
@@ -1,14 +1,3 @@
-@import url("https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css");
-@import url("https://fonts.googleapis.com/css2?family=Jura:wght@500;600;900&display=swap");
- 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .fa {
     background:#b2006500;
     color: rgb(255, 255, 255);
@@ -21,6 +10,20 @@ h1 {
 p{
     text-align: center;
     margin-bottom: 30px;
+}
+ 
+.info__payment{
+  font-size: 1.5rem;
+  font-weight: bold;
+  color:grey;
+  text-shadow:1px 1px 3px  #B2A000;
+ 
+}
+.title_pay_home{
+  font-size: 1.8rem;
+  font-weight: bold;
+  color:#B2A00E;
+  text-shadow:1px 1px 3px  #B6A100;
 }
  
 ul {
@@ -134,33 +137,29 @@ ul li .descr {
 .credits a {
   color: var(--color);
 }
-
+ 
 .container-text {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 30px;
 }
-
-p {
-    text-align: justify;
-    font-size: 0.9rem;
-}
-
+ 
+ 
 .title-text1 {
     color: #0B374D;
     text-align: center;
 }
-
+ 
 .title-text2 {
   color: #1286A8;
   text-align: center;
 }
-
+ 
 .title-text3 {
   color: #D2B53B;
   text-align: center;
 }
-
+ 
 .box-text1 {
     border: 3px solid #0B374D;
     border-radius: 9px;
@@ -170,7 +169,7 @@ p {
     box-shadow: 10px 10px 12px  #0b374dbc;
  
 }
-
+ 
 .box-text2 {
   border: 3px solid #1286A8;
   border-radius: 9px;
@@ -179,7 +178,7 @@ p {
   margin-bottom: 18px;
   box-shadow: 10px 10px 12px  #1285a8b7;
 }
-
+ 
 .box-text3 {
   border: 3px solid #D2B53B;
   border-radius: 9px;
@@ -198,12 +197,12 @@ p {
     cursor: pointer;
     padding: 6px 0;
 }
-
+ 
 .button-pay:hover {
     background-color: rgba(255, 255, 255, 0.218);
-    border:1px inset white; 
+    border:1px inset white;
 }
-
+ 
 ol li {
   list-style-type:none;
 }
