--- a/frontend/src/app/main/access-card/access-card/access-card.component.html
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.html
@@ -19,6 +19,7 @@ show-header-navigation="yes">
             [errorCorrectionLevel]="'M'"
             class="bshadow">
         </qrcode>
+        <p class="info__payment">{{ 'ACCESS_QR' | oTranslate }}</p>
     </div>
 </o-form>
 
