--- a/frontend/src/app/main/access-card/access-card/access-card.component.css
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.css
@@ -20,3 +20,19 @@
     width: 140px;
     box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.351);
   }
+
+  .info__payment{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color:grey;
+    text-shadow:1px 1px 3px  #B2A000;
+    text-align: center;
+   
+  }
+  #status{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color:grey;
+    text-shadow:1px 1px 3px  #B2A000;
+    text-align: center;
+  }
