--- a/frontend/src/app/main/payment/payment-home/payment-home.component.html
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.html
@@ -16,7 +16,7 @@
     <div class="container-text">
         <div class="box-text1">
             <h2 class="title-text1">{{"QUOTA_ACTIVE" | oTranslate }}</h2>
-            <ol>
+            <ol class="banderola" (click)="openPaymentPage('activa')">
                 <li><i style="color: #0B374D;">✔</i> {{"INFO_ACTIVE0" | oTranslate }}</li>
                 <li><i style="color: #0B374D;">✔</i> {{"INFO_ACCESS" | oTranslate }}</li>
                 <li><i style="color: #0B374D;">✔</i> {{"INFO_ACTIVE1" | oTranslate }}</li>
@@ -24,7 +24,7 @@
         </div>
         <div class="box-text2">
             <h2 class="title-text2">{{"QUOTA_VITAL" | oTranslate }}</h2>
-            <ol>
+            <ol class="banderola" (click)="openPaymentPage('vital')">
                 <li><i style="color: #1286A8;">✔</i> {{"INFO_VITAL0" | oTranslate }}</li>
                 <li><i style="color: #1286A8;">✔</i> {{"INFO_ACCESS" | oTranslate }}</li>
                 <li><i style="color: #1286A8;">✔</i> {{"INFO_VITAL1" | oTranslate }}</li>
@@ -32,7 +32,7 @@
         </div>
         <div class="box-text3">
             <h2 class="title-text3">{{"QUOTA_INTEGRAL" | oTranslate }}</h2>
-            <ol>
+            <ol class="banderola" (click)="openPaymentPage('integral')" >
                 <li><i style="color: #D2B53B;">✔</i> {{"INFO_INTEGRAL0" | oTranslate }}</li>
                 <li><i style="color: #D2B53B;">✔</i> {{"INFO_ACCESS" | oTranslate }}</li>
                 <li><i style="color: #D2B53B;">✔</i> {{"INFO_INTEGRAL1" | oTranslate }}</li>
@@ -42,7 +42,7 @@
     <p class="info__payment">
         {{"INFO_PAYMENT4" | oTranslate }}
     </p>
-    <ul>
+ <ul>
         <li style="--accent-color:#0B374D">
             <div class="icon"><i class="fa fa-play" aria-hidden="true"></i></div>
             <div class="title">Activa</div>
@@ -63,7 +63,7 @@
      
     </ul>
 </div>
-
+ 
 <div id="admin">
     <h1 class="title_pay_home">{{ 'MEMBERSHIP_WHEGYM' | oTranslate }}</h1>
     <o-form #form attr="payment_detail" service="users" entity="user" fxLayout="column"
@@ -78,7 +78,7 @@
         {{"INFO_PAYMENT1_ADMIN" | oTranslate }} <br>
         {{"INFO_PAYMENT2_ADMIN" | oTranslate }}<br>
     </p>
-    <div class="container-text-admin">
+    <div class="container-text-admin banderola" (click)="openPaymentPage('wheplus')">
         <div class="box-text2">
             <ol>
                 <li><i style="color: #1286A8;">✔ </i><b>{{"INFO_ADMIN_TITLE0" | oTranslate }}</b>{{"INFO_ADMIN0" | oTranslate }}</li>
@@ -91,12 +91,12 @@
         {{"INFO_PAYMENT4_ADMIN" | oTranslate }}
     </p>
     <ul>
-        <li style="--accent-color:#1286A8">
-            <div class="icon"><i class="fa fa-forward" aria-hidden="true"></i></div>
-            <div class="title">WhePlus</div>
-            <div class="descr">87'99€</div>
+        <li style="--accent-color:#1286A8" (click)="openPaymentPage('wheplus')">
+            <div  class="icon"><i class="fa fa-forward" aria-hidden="true"></i></div>
+            <div  class="title">WhePlus</div>
+            <div   class="descr">87'99€</div>
             <button (click)="openPaymentPage('wheplus')" class="button-pay">{{"BUTTON_ACCESS" | oTranslate }}</button>
         </li>
-     
+   
     </ul>
 </div>
