--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -287,7 +287,7 @@ div.o-grid-footer .ng-star-inserted  .mat-button-wrapper{
  color:#B2A000;
  font-size: 2.2rem;
 }
-.o-form-toolbar {
+.container_reviews .o-form-toolbar {
   flex: none;
   display: block;
   position: absolute;
