--- a/frontend/src/app/main/payment/payment-new/payment-new.component.html
+++ b/frontend/src/app/main/payment/payment-new/payment-new.component.html
@@ -1,7 +1,8 @@
 <div mat-dialog-content class="container-payment">
-    <o-form fxFill #form service="payments" entity="payment" keys="user_" header-actions="I"
-    show-header-navigation="no" (onFormModeChange)="forceInsertMode($event)" (onInsert)="closeDialog($event)" ignore-default-navigation="yes"
-    (onCancel)="closeDialog($event)" undo-button="no">
+  <o-form fxFill #form service="payments" entity="payment" keys="user_" header-actions="I"
+  show-header-navigation="no" (onFormModeChange)="forceInsertMode($event)" (onInsert)="closeDialog($event)" ignore-default-navigation="yes"
+  (onCancel)="closeDialogCancel($event)" undo-button="no">
+  
     <o-row>
         <o-column
           title="PAYMENT"
