--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -66,10 +66,10 @@
     <div>
       <div class="image_logo"><img src="../../../assets/images/logo.png"></div>
       <ul class="networks">
-        <li><a href="#" class="fa fa-facebook"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=61553997020601" target="_blank" class="fa fa-facebook"></a></li>
         <li><a href="#" class="fa fa-twitter"></a></li>
         <li><a href="#" class="fa fa-instagram"></a></li>
-        <li><a href="#" class="fa fa-youtube"></a></li>
+        <li><a href="https://youtu.be/R__nFBcim3g" target="_blank" class="fa fa-youtube"></a></li>
       </ul>
     </div>
     <div></div>
