--- a/frontend/src/app/main/payment/payment-home/payment-home.component.html
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.html
@@ -78,9 +78,9 @@
         {{"INFO_PAYMENT1_ADMIN" | oTranslate }} <br>
         {{"INFO_PAYMENT2_ADMIN" | oTranslate }}<br>
     </p>
-    <div class="container-text-admin banderola" (click)="openPaymentPage('wheplus')">
+    <div class="container-text-admin" (click)="openPaymentPage('wheplus')">
         <div class="box-text2">
-            <ol>
+            <ol class="banderola_admin">
                 <li><i style="color: #1286A8;">✔ </i><b>{{"INFO_ADMIN_TITLE0" | oTranslate }}</b>{{"INFO_ADMIN0" | oTranslate }}</li>
                 <li><i style="color: #1286A8;">✔ </i><b>{{"INFO_ADMIN_TITLE1" | oTranslate }}</b> {{"INFO_ADMIN1" | oTranslate }}</li>
                 <li><i style="color: #1286A8;">✔ </i> <b>{{"INFO_ADMIN_TITLE2" | oTranslate }}</b> {{"INFO_ADMIN2" | oTranslate }}</li>
