--- a/frontend/src/app/main/payment/payment-home/payment-home.component.css
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.css
@@ -217,3 +217,9 @@ ol li {
   filter: brightness(1.3);
   transform: scale(1.2);
 }
+.banderola_admin:hover{
+  filter: brightness(1.3);
+}
+.banderola_admin {
+  cursor:pointer;
+}
