--- a/frontend/src/app/main/access-card/access-card/access-card.component.html
+++ b/frontend/src/app/main/access-card/access-card/access-card.component.html
@@ -14,7 +14,7 @@ show-header-navigation="yes">
  
     <div id="qrid" style="display: none;">
         <qrcode
-            [qrdata]="data.name +' '+ data.surname +': '+ 'Acceso permitido'" 
+            [qrdata]="data.name +' '+ data.surname +' '+ data.nif +': '+ 'Acceso permitido'" 
             [width]="300"
             [errorCorrectionLevel]="'M'"
             class="bshadow">
