--- a/frontend/src/app/main/payment/payment-new/payment-new.component.html
+++ b/frontend/src/app/main/payment/payment-new/payment-new.component.html
@@ -59,8 +59,9 @@
             <o-date-input
                 attr="expiration"
                 class="fecha"
-                placeholder="MM/YYYY"
-                format="MM/YYYY"
+                placeholder="MM/YY"
+                format="MM/YY"
+                required="yes"
                 onClick="event.preventDefault()">
             </o-date-input>
           </o-row>
