sprint review bugs4

--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-detail/service-gymadmin-detail.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-detail/service-gymadmin-detail.component.html
@@ -69,6 +69,7 @@
           visible-columns="name"
           value-column="categoryid"
           class="input-padding"
+          searchable="yes"
         ></o-combo>
       </o-row>
       <o-row>
@@ -84,6 +85,7 @@
           visible-columns="name"
           value-column="gymid"
           class="input-padding"
+          searchable="yes"
         ></o-combo>
       </o-row>
     </o-column>
