--- a/frontend/src/app/main/reviews/reviews-home/reviews-home.component.html
+++ b/frontend/src/app/main/reviews/reviews-home/reviews-home.component.html
@@ -34,6 +34,7 @@
         class="input-padding"
         sort="ASC"
         required="yes"
+        searchable="yes"
       >
       </o-combo>
       <div>
