--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-new/service-gymadmin-new.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-new/service-gymadmin-new.component.html
@@ -56,6 +56,7 @@
             visible-columns="name"
             value-column="categoryid"
             class="input-padding"
+            searchable="yes"
           ></o-combo>
       </o-row>
       
@@ -72,6 +73,7 @@
           visible-columns="name"
           value-column="gymid"
           class="input-padding"
+          searchable="yes"
         ></o-combo>
       </o-row>
     </o-column>
