calendar icon changed in grid

--- a/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
@@ -37,7 +37,7 @@
         <span class="phone"><mat-icon>call</mat-icon>{{ data.phone }}</span>
 
         <span *ngIf="data.schedule">
-          <mat-icon>schedule</mat-icon>Horario: {{ data.schedule }}
+          <mat-icon>calendar_month</mat-icon>Horario: {{ data.schedule }}
         </span>
         
         <span class="rate">{{ getStars(data.rate) }}</span>
