--- a/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="schedule">
-      <mat-icon>schedule</mat-icon><span>{{ list.schedule }}</span>
+      <mat-icon>calendar_month</mat-icon><span>{{ list.schedule }}</span>
     </div>
     
     <!-- <div class="rate">
