--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -425,3 +425,22 @@ border: 1px solid rgba(255, 255, 255, 0.19);
  .input-padding {
   margin-right: 20px;
 }
+
+
+.column-subscribe .o-form-toolbar .o-form-toolbar-header {
+  position:absolute;
+  bottom:18px;
+  right: 100px;
+  z-index: 10;
+  font-size: 2rem;
+ 
+ 
+}
+.column-subscribe .o-form-toolbar .o-form-toolbar-header .mat-toolbar-tools button.o-form-toolbar-button.mat-icon-button.mat-button-base{
+  border:3px inset red;
+  padding: 5px;
+  width: 50px;
+  height:50px;
+  border-radius: 50%;
+  background-color: antiquewhite;
+}
